--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.3.3",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
